--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,9 @@ body{
     margin: 0;
     font-family: "Helvetica Neue",Roboto,Arial,"Droid Sans",sans-serif;
 }
-
+a{
+  cursor: pointer;
+}
 div.full-length, 
 table.full-length,
 ul.full-length,
@@ -253,3 +255,501 @@ select.invisible:focus{
 }
 /*--end style form----*/
 
+ul.nopad {
+  -webkit-margin-before: 0;
+  -webkit-margin-after: 0;
+  -webkit-margin-start: 0;
+  -webkit-margin-end: 0;
+  -webkit-padding-start: 0;
+}
+p.nopad,
+h1.nopad,
+h2.nopad,
+h3.nopad {
+  -webkit-margin-before: 0;
+  -webkit-margin-after: 0;
+  -webkit-margin-start: 0;
+  -webkit-margin-end: 0;
+  -webkit-padding-start: 0;
+}
+
+
+
+.column {
+  overflow: hidden;
+}
+.column > div,
+.column > span,
+.column > table,
+.column > li {
+  float: left;
+}
+ul.column {
+  padding-left: 0;
+  margin-top: 0;
+}
+
+.column .cols-1 {
+  width: calc(100% * 1 / 12);
+}
+.column .cols-2 {
+  width: calc(100% * 2 / 12);
+}
+.column .cols-3 {
+  width: calc(100% * 3 / 12);
+}
+.column .cols-4 {
+  width: calc(100% * 4 / 12);
+}
+.column .cols-5 {
+  width: calc(100% * 5 / 12);
+}
+.column .cols-6 {
+  width: calc(100% * 6 / 12);
+}
+.column .cols-7 {
+  width: calc(100% * 7 / 12);
+}
+.column .cols-8 {
+  width: calc(100% * 8 / 12);
+}
+.column .cols-9 {
+  width: calc(100% * 9 / 12);
+}
+.column .cols-10 {
+  width: calc(100% * 10 / 12);
+}
+.column .cols-11 {
+  width: calc(100% * 11 / 12);
+}
+.column .cols-12 {
+  width: calc(100% * 12 / 12);
+}
+
+.column .fspccols-1 {
+  width: calc((100% * 1 / 12) - 15px);
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.column .fspccols-2 {
+  width: calc((100% * 2 / 12) - 15px);
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.column .fspccols-3 {
+  width: calc((100% * 3 / 12) - 15px);
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.column .fspccols-4 {
+  width: calc((100% * 4 / 12) - 15px);
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.column .fspccols-5 {
+  width: calc((100% * 5 / 12) - 15px);
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.column .fspccols-6 {
+  width: calc((100% * 6 / 12) - 15px);
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.column .fspccols-7 {
+  width: calc((100% * 7 / 12) - 15px);
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.column .fspccols-8 {
+  width: calc((100% * 8 / 12) - 15px);
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.column .fspccols-9 {
+  width: calc((100% * 9 / 12) - 15px);
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.column .fspccols-10 {
+  width: calc((100% * 10 / 12) - 15px);
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.column .fspccols-11 {
+  width: calc((100% * 11 / 12) - 15px);
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.column .fspccols-12 {
+  width: calc((100% * 12 / 12) - 15px);
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.column .spccols-1 {
+  width: calc((100% * 1 / 12) - 10px);
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.column .spccols-2 {
+  width: calc((100% * 2 / 12) - 10px);
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.column .spccols-3 {
+  width: calc((100% * 3 / 12) - 10px);
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.column .spccols-4 {
+  width: calc((100% * 4 / 12) - 10px);
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.column .spccols-5 {
+  width: calc((100% * 5 / 12) - 10px);
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.column .spccols-6 {
+  width: calc((100% * 6 / 12) - 10px);
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.column .spccols-7 {
+  width: calc((100% * 7 / 12) - 10px);
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.column .spccols-8 {
+  width: calc((100% * 8 / 12) - 10px);
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.column .spccols-9 {
+  width: calc((100% * 9 / 12) - 10px);
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.column .spccols-10 {
+  width: calc((100% * 10 / 12) - 10px);
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.column .spccols-11 {
+  width: calc((100% * 11 / 12) - 10px);
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.column .spccols-12 {
+  width: calc((100% * 12 / 12) - 10px);
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.column .lcols-1 {
+  width: calc((100% * 1 / 12) - 15px);
+}
+.column .lcols-2 {
+  width: calc((100% * 2 / 12) - 15px);
+}
+.column .lcols-3 {
+  width: calc((100% * 3 / 12) - 15px);
+}
+.column .lcols-4 {
+  width: calc((100% * 4 / 12) - 15px);
+}
+.column .lcols-5 {
+  width: calc((100% * 5 / 12) - 15px);
+}
+.column .lcols-6 {
+  width: calc((100% * 6 / 12) - 15px);
+}
+.column .lcols-7 {
+  width: calc((100% * 7 / 12) - 15px);
+}
+.column .lcols-8 {
+  width: calc((100% * 8 / 12) - 15px);
+}
+.column .lcols-9 {
+  width: calc((100% * 9 / 12) - 15px);
+}
+.column .lcols-10 {
+  width: calc((100% * 10 / 12) - 15px);
+}
+.column .lcols-11 {
+  width: calc((100% * 11 / 12) - 15px);
+}
+.column .lcols-12 {
+  width: calc((100% * 12 / 12) - 15px);
+}
+
+.column .fcols-1 {
+  width: calc(100% * 1 / 12);
+}
+.column .fcols-2 {
+  width: calc(100% * 2 / 12);
+}
+.column .fcols-3 {
+  width: calc(100% * 3 / 12);
+}
+.column .fcols-4 {
+  width: calc(100% * 4 / 12);
+}
+.column .fcols-5 {
+  width: calc(100% * 5 / 12);
+}
+.column .fcols-6 {
+  width: calc(100% * 6 / 12);
+}
+.column .fcols-7 {
+  width: calc(100% * 7 / 12);
+}
+.column .fcols-8 {
+  width: calc(100% * 8 / 12);
+}
+.column .fcols-9 {
+  width: calc(100% * 9 / 12);
+}
+.column .fcols-10 {
+  width: calc(100% * 10 / 12);
+}
+.column .fcols-11 {
+  width: calc(100% * 11 / 12);
+}
+.column .fcols-12 {
+  width: calc(100% * 12 / 12);
+}
+
+.threecols {
+  float: left;
+}
+.threecols .cols,
+.threecols .cols-spc,
+.threecols .fcols,
+.threecols .fcols-spc {
+  float: left;
+}
+
+.threecols .cols,
+.threecols .fcols {
+  min-width: 30%;
+  width: -webkit-calc(100% / 3);
+  width: -moz-calc(100% / 3);
+  width: calc(100% / 3);
+}
+.threecols .cols-spc {
+  width: calc(100% / 3 - 15px);
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.threecols .fcols-spc {
+  width: calc(100% / 3 - 15px);
+  margin-left: 5px;
+  margin-right: 5px;
+}
+
+@media screen and (max-width: 1024px) {
+  .center-content-box {
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+  }
+  .column .cols-1 {
+    width: 100%;
+  }
+  .column .cols-2 {
+    width: 100%;
+  }
+  .column .cols-3 {
+    width: 100%;
+  }
+  .column .cols-4 {
+    width: 100%;
+  }
+  .column .cols-5 {
+    width: 100%;
+  }
+  .column .cols-6 {
+    width: 100%;
+  }
+  .column .cols-7 {
+    width: 100%;
+  }
+  .column .cols-8 {
+    width: 100%;
+  }
+  .column .cols-9 {
+    width: 100%;
+  }
+  .column .cols-10 {
+    width: 100%;
+  }
+  .column .cols-11 {
+    width: 100%;
+  }
+  .column .cols-12 {
+    width: 100%;
+  }
+
+  .column .lcols-1 {
+    width: 100%;
+  }
+  .column .lcols-2 {
+    width: 100%;
+  }
+  .column .lcols-3 {
+    width: 100%;
+  }
+  .column .lcols-4 {
+    width: 100%;
+  }
+  .column .lcols-5 {
+    width: 100%;
+  }
+  .column .lcols-6 {
+    width: 100%;
+  }
+  .column .lcols-7 {
+    width: 100%;
+  }
+  .column .lcols-8 {
+    width: 100%;
+  }
+  .column .lcols-9 {
+    width: 100%;
+  }
+  .column .lcols-10 {
+    width: 100%;
+  }
+  .column .lcols-11 {
+    width: 100%;
+  }
+  .column .lcols-12 {
+    width: 100%;
+  }
+
+  .column .spccols-1 {
+    width: calc(100% - 10px);
+  }
+  .column .spccols-2 {
+    width: calc(100% - 10px);
+  }
+  .column .spccols-3 {
+    width: calc(100% - 10px);
+  }
+  .column .spccols-4 {
+    width: calc(100% - 10px);
+  }
+  .column .spccols-5 {
+    width: calc(100% - 10px);
+  }
+  .column .spccols-6 {
+    width: calc(100% - 10px);
+  }
+  .column .spccols-7 {
+    width: calc(100% - 10px);
+  }
+  .column .spccols-8 {
+    width: calc(100% - 10px);
+  }
+  .column .spccols-9 {
+    width: calc(100% - 10px);
+  }
+  .column .spccols-10 {
+    width: calc(100% - 10px);
+  }
+  .column .spccols-11 {
+    width: calc(100% - 10px);
+  }
+  .column .spccols-12 {
+    width: calc(100% - 10px);
+  }
+
+  .threecols .cols {
+    width: 100%;
+  }
+  .threecols .cols-spc {
+    width: 100%;
+    width: -webkit-calc(100% - 15px);
+    -moz-width: calc(100% - 15px);
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .column .fcols-1 {
+    width: 100%;
+  }
+  .column .fcols-2 {
+    width: 100%;
+  }
+  .column .fcols-3 {
+    width: 100%;
+  }
+  .column .fcols-4 {
+    width: 100%;
+  }
+  .column .fcols-5 {
+    width: 100%;
+  }
+  .column .fcols-6 {
+    width: 100%;
+  }
+  .column .fcols-7 {
+    width: 100%;
+  }
+  .column .fcols-8 {
+    width: 100%;
+  }
+  .column .fcols-9 {
+    width: 100%;
+  }
+  .column .fcols-10 {
+    width: 100%;
+  }
+  .column .fcols-11 {
+    width: 100%;
+  }
+  .column .fcols-12 {
+    width: 100%;
+  }
+}
+
+
+/*Sapce or margin default 10px*/
+.spc-tb {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.spc-rl {
+  margin-right: 10px;
+  margin-left: 10px;
+}
+.pad-tb {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.pad-rl {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.spc-t {
+  margin-top: 10px;
+}
+.spc-b {
+  margin-bottom: 10px;
+}
+.spc-r {
+  margin-right: 10px;
+}
+.spc-l {
+  margin-left: 10px;
+}
+.spc-rl.fullspc,
+.pad-rl.fullspc {
+  width: calc(100% - 20px);
+}
+/*-end-*/
